# $Id$

CoLo 1.10 (xxxx-xx-xx)
----------------------

*	Fixed loading of files with sparse blocks.

*	Added signature to Flash, and 'colo-perm' to test for it.

CoLo 1.9 (2004-05-02)
---------------------

*	CTRL-C now acts as a break key (in addition to SPACE).

*	Comments are now only supported in scripts.

*	The 'script' command has been changed to execute a script already loaded
 	into memory via the 'load', 'tftp' or 'download' commands.

	** NOTE **

		Scripts must now begin with the line '#:CoLo:#'.

*	Automatic insertion of the kernel 'initrd=' command line argument has been
 	removed. All initrd parameters are now available in variables.

*	Made use of non-volatile storage on RTC.

*	Renamed 'dflags' command to 'nvflags' and made the flags non-volatile.

*	Added boot menu and 'boot' command.

	*note*

		If you do not want the boot menu to appear every boot use the command
		'boot default 1' (see README.shell).

*	Added 'variable' command.

*	Implemented variable substition in shell command lines.

*	DHCP now sets variables with boot information.

*	Added 'lcd' command.

CoLo 1.8 (2004-04-26)
---------------------

*	Added 'pci' command.

*	Added 'ping' command.

*	Added 'tftp' command.

*	Added network stack (the 'net' command).

*	Added man pages for 'flash-tool' and 'putlcd'.
	[Martin Michlmayr]

CoLo 1.6 (2004-04-18)
---------------------

*	Added support for RAID partitions.
	[Christian Mock]

*	The layout of the source tree has been tidied up.

*	Stage 2 is now loaded at the top of RAM rather than the bottom. We can now
	load kernels linked to run at 0x80000000. This is a big change, but it all
	seems to work.

	Unfortunately the chain loader can no longer detect if it's being loaded
	from "CoLo".

*	Build output files are now 'colo-rom-image.bin' and 'colo-chain.elf'.

*	Boot loader now sources the script '/boot/default.colo' by default, rather
	than '/boot/default.boot'.

*	Fixed stupid error in linking of chain loader.

CoLo 1.5 (2004-04-11)