@@ -7,6 +7,10 @@ CoLo 1.10 (xxxx-xx-xx)
 
 *	Added signature to Flash, and 'colo-perm' to test for it.
 
+*	Changed PCI latency registers to 64 (matches kernel default).
+
+*	Added NFS support ('nfs' command).
+
 CoLo 1.9 (2004-05-02)
 ---------------------
 
